--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -5,8 +5,8 @@
       <i-input value="{{ value7 }}" type="number"  mode="wrapped" placeholder="请输入查询单词" />
   </i-panel>
   <i-panel class="search-btn">
-    <i-button bind:click="handleClick" type="primary" size="10px" >语音查词</i-button>
-    <i-button bind:click="handleClick" type="primary" size="20px" >图片查词</i-button>
+    <i-button bind:click="handleClick" i-class='myclass' type="primary" size="10px" >语音查词</i-button>
+    <i-button bind:click="handleClick" i-class='myclass' type="primary" size="20px" >图片查词</i-button>
   </i-panel>
 </view>
 </template>
