--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -1,7 +1,30 @@
 <!--miniprogram/pages/mine/mine.wxml-->
 <template name="mineItem">
 <view wx:if="{{isList.mine}}" class="mine">
-mine
+
+  <!-- 用户 openid -->
+  <i-cell-group>
+  <view class="userinfo">
+      <button 
+        open-type="getUserInfo" 
+        bindgetuserinfo="onGetUserInfo"
+        class="userinfo-avatar"
+        style="background-image: url({{avatarUrl}})"
+      ></button>
+      <view>
+        <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
+      </view>
+    </view>
+  </i-cell-group>
+  
+  <i-cell-group class="userOperation">
+      <i-cell title="只显示箭头" is-link></i-cell>
+      <i-cell title="跳转到首页" is-link url="/pages/dashboard/index"></i-cell>
+      <i-cell title="只有 footer 点击有效" is-link url="/pages/dashboard/index" only-tap-footer></i-cell>
+      <i-cell title="开关">
+          <switch slot="footer" checked />
+      </i-cell>
+  </i-cell-group>
 </view>
 </template>
 
