--- a/miniprogram/pages/community/community.wxss
+++ b/miniprogram/pages/community/community.wxss
@@ -1,1 +1,8 @@
 /* miniprogram/pages/community/community.wxss */
+.myclass2{
+  display: inline-block;
+  height: 20px !important;
+  line-height: 20px !important;
+  vertical-align: middle !important;
+  margin: 0px !important;
+}
