--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,3 +1,4 @@
 /* miniprogram/pages/index/index.wxss */
 @import "../search/search.wxss";
 @import "../mine/mine.wxss";
+@import "../community/community.wxss";
