--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -4,13 +4,14 @@
   height: 140rpx;
   width: 100%;
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0);
   border-left: none;
   border-right: none;
   display: flex;
   flex-direction: row;
   align-items: center;
   transition: all 300ms ease;
+  margin-bottom: 40rpx;
 }
 
 .userinfo-avatar {
