--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -2,11 +2,12 @@
 <template name="searchItem">
 <view wx:if="{{isList.search}}" class="search">
   <i-panel>
-      <i-input value="{{ value7 }}" type="number"  mode="wrapped" placeholder="请输入查询单词" />
+      <i-input value="{{ value7 }}" type="text"  mode="wrapped" placeholder="请输入查询单词" />
   </i-panel>
   <i-panel class="search-btn">
     <i-button catch:touchstart="startClick"  catch:touchend="stopClick" i-class='myclass' type="primary" size="10px" >语音查词</i-button>
     <i-button bind:click="handleClickFromImage" i-class='myclass' type="primary" size="20px" >图片查词</i-button>
   </i-panel>
+  
 </view>
 </template>
