--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -18,6 +18,7 @@
   </i-cell-group>
   
   <i-cell-group class="userOperation">
+      <i-cell title="学习进度" is-link url="/pages/dashboard/index"> </i-cell>
       <i-cell title="只显示箭头" is-link></i-cell>
       <i-cell title="跳转到首页" is-link url="/pages/dashboard/index"></i-cell>
       <i-cell title="只有 footer 点击有效" is-link url="/pages/dashboard/index" only-tap-footer></i-cell>
