--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -8,10 +8,69 @@
     <i-tab-bar-item key="search" icon="search" current-icon="searchfill" title="查词"></i-tab-bar-item>
     <i-tab-bar-item key="community" icon="group" current-icon="group_fill" title="社区"></i-tab-bar-item>
     <i-tab-bar-item key="mine" icon="mine" current-icon="mine_fill" title="我的"></i-tab-bar-item>
-</i-tab-bar>
+</i-tab-bar> 
 
 <view wx:if="{{isList.index}}" class="index">
-index
+<view class="word_index_circle">
+    <i-progress percent="{{percent}}" status="active"></i-progress>
+   
+  </view>
+  <view class="word_index_task">
+    <view class='status'>
+      <i-icon type="emoji" size="20"/>
+      <text>{{word_learing}}</text>
+      <text>学习中字词</text>
+    </view>
+    <view class='status'>
+      <i-icon type="success"   size="20"/>
+      <text>{{word_learned}}</text>
+      <text>已学习字词</text>
+    </view>
+    
+    <view class='status'>
+      <i-icon type="delete" size="20"/>
+      
+      <text>{{word_unlearn}}</text> 
+      <text>未学习字词</text>
+    </view>
+  </view>
+  <view class="add_start_btn">
+    
+    <i-button type="primary" bind:click="clickStudy">开始学习</i-button>
+    
+  </view>
+  <view class="grid_style">
+    <i-grid>
+      <i-grid-item>
+          <i-grid-icon>
+              <image src="../../images/index/xuexi.png" />
+          </i-grid-icon>
+          <i-grid-label>学习</i-grid-label>
+      </i-grid-item>
+      <i-grid-item>
+          <i-grid-icon>
+              <image  src="../../images/index/cuoci.png" />
+          </i-grid-icon>
+          <i-grid-label>错词本</i-grid-label>
+      </i-grid-item>
+      
+    </i-grid>
+    <i-grid>
+      <i-grid-item>
+          <i-grid-icon>
+              <image src="../../images/index/duizhan.png" />
+          </i-grid-icon>
+          <i-grid-label>好友对战</i-grid-label>
+      </i-grid-item>
+      <i-grid-item>
+          <i-grid-icon>
+              <image src="../../images/index/juzi.png" />
+          </i-grid-icon>
+          <i-grid-label>每日一句</i-grid-label>
+      </i-grid-item>
+      
+    </i-grid>
+  </view>
 </view>
 
 
