--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -25,4 +25,25 @@
 
 .userOperation{
   margin-top: 40rpx;
+  
 }
+
+/* pages/index4/index4.wxss */
+.mine-userinfo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;/*定义body的元素垂直居中*/
+  padding-top:50rpx;
+  background-color: white;
+  
+  justify-content: center; /*定义body的里的元素水平居中*/
+}
+.username {
+  text-align: center;
+}
+
+.username{
+  margin-bottom: 30rpx;
+}
+
+
