--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -3,8 +3,8 @@
 <view wx:if="{{isList.mine}}" class="mine">
 
   <!-- 用户 openid -->
-  
-  <view class="mine-userinfo">
+ <view class="detail-container" style="background:url({{avatarUrl}}) no-repeat top/cover"></view>
+  <view class="mine-userinfo" >
       <button 
         open-type="getUserInfo" 
         bindgetuserinfo="onGetUserInfo"
@@ -15,20 +15,33 @@
        {{userInfo.nickName}}
       </view>
   </view>
+
   
-  
-  <i-cell-group i-class="userOperation">
-      <i-cell title="学习进度" is-link url="/pages/dashboard/index"> </i-cell>
-      
-        <i-cell title="学习设置" is-link="true" url="pages/index/index" link-type="navigateTo"></i-cell>
+  <i-cell-group >
+  、
+      <i-cell title="学习进度" is-link url="/pages/dashboard/index"> 
+        <i-icon slot="icon" type="dynamic"size="24" color="#6100ff" />
+      </i-cell>
     
-      <i-cell title="我的收藏" is-link url="/pages/dashboard/index"></i-cell>
+    <navigator url="/pages/mine/setting/setting" >
+      <i-cell title="学习设置" is-link url="pages/index/index" link-type="navigateTo">
+        <i-icon slot="icon" type="setup" size="24" color="#6100ff" />
+      </i-cell>
+    </navigator>
+      <i-cell title="我的收藏" is-link url="/pages/dashboard/index">
+        <i-icon slot="icon" type="collection" size="24" color="#6100ff"/>
+      </i-cell>
       <i-cell title="夜间模式">
+          <i-icon slot="icon" type="time" size="24" color="#6100ff"/>
           <switch slot="footer" checked />
       </i-cell>
   </i-cell-group>
   <i-cell-group i-class="userOperation">
-    <i-cell title="关于我们" is-link url="/pages/dashboard/index"> </i-cell>
+    <navigator url="/pages/mine/about/about" >
+      <i-cell title="关于我们" is-link url="/pages/dashboard/index"> 
+        <i-icon slot="icon" type="mine" size="24" color="#6100ff" />
+      </i-cell>
+    </navigator>
   </i-cell-group>
 </view>
 </template>
