--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -1,7 +1,5 @@
 /* miniprogram/pages/mine/mine.wxss */
 .userinfo, .uploader, .tunnel {
-  margin-top: 40rpx;
-  height: 140rpx;
   width: 100%;
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0);
@@ -30,12 +28,17 @@
 
 /* pages/index4/index4.wxss */
 .mine-userinfo{
+  position: absolute;
   display: flex;
+  top: 0;
+  left: 33%;
+  
   flex-direction: column;
   align-items: center;/*定义body的元素垂直居中*/
-  padding-top:50rpx;
-  background-color: white;
+  padding-top:0rpx;
+  /*background-color: white;*/
   
+  height: 250rpx;
   justify-content: center; /*定义body的里的元素水平居中*/
 }
 .username {
@@ -45,5 +48,9 @@
 .username{
   margin-bottom: 30rpx;
 }
-
-
+.detail-container {
+  height: 250rpx;
+  filter: blur(40rpx);
+  opacity: 0.3;
+  z-index:-1;
+}
