--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -2,6 +2,11 @@
 @import "../search/search.wxss";
 @import "../mine/mine.wxss";
 @import "../community/community.wxss";
+.index-top{
+ background: -webkit-linear-gradient(left,#f6f6f6,rgb(211, 248, 242),lightblue,
+  rgb(211, 248, 242),#f6f6f6);
+  border:none;
+}
 .word_index_container {
   display: flex;
   flex-direction: column;
@@ -13,26 +18,33 @@
 
 .word_index_circle{
   text-align:center;
-  align-items:center;
-  position: fixed;
-  width: 100%;
-  top: 20%;
-}
+  position: relative;
+  height:150rpx;
+  align-items: center; /*定义body的元素垂直居中*/
+  justify-content: center; /*定义body的里的元素水平居中*/
 
+  margin:0 30rpx;
+  border-radius: 5px;
+
+}
+.word_index_progress{
+  top:25%;
+}
 .word_index_task{
+  
   text-align:center;
   align-items:center;
-  position: fixed;
+  position: relative;
   width: 100%;
-  bottom: 63%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  height:200rpx;
 }
 .status{
   display: flex;
   flex-direction: column;
-  font-size: 18rpx;
+  font-size: 20rpx;
 }
 .word_index_start_and_status{
   
@@ -42,16 +54,9 @@
 
 .add_start_btn{
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom:  50%;
   /* bottom 是根据 tab-bar 的高度为70px 设置的 */
-}
-.grid_style{
-  width: 100%;
-  position: fixed;
-  bottom:  7%;
-  /* bottom 是根据 tab-bar 的高度为70px 设置的 */
-  
 }
 
 
@@ -79,8 +84,13 @@
   font-size: 35rpx;
   color: #333333;
 }
-
+.grid_style{
+  width: 100%;
+  position: relative;
+  /* bottom 是根据 tab-bar 的高度为70px 设置的 */
+}
 .grid_index{
+  
   height: 240rpx;
 }
 .grid-img{
