--- a/miniprogram/pages/mine/about/about.wxss
+++ b/miniprogram/pages/mine/about/about.wxss
@@ -1,11 +1,11 @@
 /* miniprogram/pages/mine/about/about.wxss */
 page{
-  background-color: #d2f1f0;
+  background: -webkit-linear-gradient(top,rgb(211, 248, 242),lightblue
+  ,rgb(83, 201, 248));
   width: 100%;
   height: 100%;
 }
 .about{
-  background-color: #d2f1f0;
   width: 100%;
   height: 100%;
   display: flex;
