--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -31,8 +31,8 @@
   position: absolute;
   display: flex;
   top: 0;
-  left: 33%;
-  
+  left: 50%;
+  margin-left: -100rpx;
   flex-direction: column;
   align-items: center;/*定义body的元素垂直居中*/
   padding-top:0rpx;
