--- a/miniprogram/pages/mine/setting/setting.wxss
+++ b/miniprogram/pages/mine/setting/setting.wxss
@@ -1,4 +1,10 @@
 /* miniprogram/pages/mine/setting/setting.wxss */
+page{
+  background: -webkit-linear-gradient(top,rgb(211, 248, 242),lightblue
+  ,rgb(83, 201, 248));
+  width: 100%;
+  height: 100%;
+}
 .margin-top {
   margin-top: 30rpx;
 
